--- a/spring-cloud-gcp-demo-config/src/main/resources/application.properties
+++ b/spring-cloud-gcp-demo-config/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-spring.application.name=spring-cloud-gcp-demo-config
+# To allow unrestricted access to /actuator/refresh for testing
+management.endpoints.web.exposure.include=refresh
