--- a/spring-cloud-gcp-demo-gcs/pom.xml
+++ b/spring-cloud-gcp-demo-gcs/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.2.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>spring.cloud.gcp.demo</groupId>
+	<artifactId>gcs</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>gcs</name>
+	<description>GCS project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud-gcp.version>5.1.0</spring-cloud-gcp.version>
